added some corrections to StarterScript to try and secceed in building spark.